Code : Updated finding Human Faces in Images

--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -278,18 +278,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage of humans correctly classified as people: 99%\n",
+      "Percentage of dogs misclassified as people: 11%\n"
+     ]
+    }
+   ],
    "source": [
     "human_files_short = human_files[:100]\n",
     "dog_files_short = train_files[:100]\n",
     "# Do NOT modify the code above this line.\n",
     "\n",
     "## TODO: Test the performance of the face_detector algorithm \n",
-    "## on the images in human_files_short and dog_files_short."
+    "## on the images in human_files_short and dog_files_short.\n",
+    "human_count = 0\n",
+    "total = 0\n",
+    "for img in human_files_short:\n",
+    "    if not face_detector(img):\n",
+    "        human_count += 1\n",
+    "        percentage = 100 - human_count\n",
+    "print('Percentage of humans correctly classified as people: {}%'.format(percentage))\n",
+    "\n",
+    "dog_count = 0\n",
+    "for img in dog_files_short:\n",
+    "    isPerson = face_detector(img)\n",
+    "    if isPerson:\n",
+    "        dog_count += 1\n",
+    "        percentage = dog_count\n",
+    "print('Percentage of dogs misclassified as people: {}%'.format(percentage))"
    ]
   },
   {
